--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="theme-color" content="#cc3333">
-<title>AvO Adventure Game</title>
+<title>Chinese New Year 2018 - Year of the Dog</title>
 <link href="./app/main.css" rel="stylesheet">
 <script src="./app/main.js"></script>
 </head>
