Added OpenGraph data

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="theme-color" content="#cc3333">
 <title>Chinese New Year 2018 - Year of the Dog</title>
+<meta property="og:title" content="Chinese New Year 2018 - Year of the Dog" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://shaunanoordin.com/cny2018/" />
+<meta property="og:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png" />
 <link href="./app/main.css" rel="stylesheet">
 <script src="./app/main.js"></script>
 </head>
