--- a/index.html
+++ b/index.html
@@ -2,13 +2,21 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<title>Chinese New Year 2018 - Year of the Dog</title>
+<meta name="description" content="This is a combination Chinese New Year greeting card and mini video game to celebrate the Year of the Dog. Gong Xi Fa Cai, everyone!">
+<meta property="og:title" content="Chinese New Year 2018 - Year of the Dog">
+<meta property="og:description" content="This is a combination Chinese New Year greeting card and mini video game to celebrate the Year of the Dog. Gong Xi Fa Cai, everyone!">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://shaunanoordin.com/cny2018/">
+<meta property="og:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@darke_shard">
+<meta name="twitter:creator" content="@darke_shard">
+<meta name="twitter:title" content="Chinese New Year 2018 - Year of the Dog">
+<meta name="twitter:description" content="This is a combination Chinese New Year greeting card and mini video game to celebrate the Year of the Dog. Gong Xi Fa Cai, everyone!">
+<meta name="twitter:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="theme-color" content="#cc3333">
-<title>Chinese New Year 2018 - Year of the Dog</title>
-<meta property="og:title" content="Chinese New Year 2018 - Year of the Dog" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://shaunanoordin.com/cny2018/" />
-<meta property="og:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png" />
 <link href="./app/main.css" rel="stylesheet">
 <script src="./app/main.js"></script>
 </head>
