--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <meta property="og:type" content="website">
 <meta property="og:url" content="https://shaunanoordin.com/cny2018/">
 <meta property="og:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
+<meta property="og:image:type" content="image/png">
+<meta property="og:image:width" content="1024">
+<meta property="og:image:height" content="640">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@darke_shard">
 <meta name="twitter:creator" content="@darke_shard">
