--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <meta property="og:title" content="Chinese New Year 2018 - Year of the Dog">
 <meta property="og:description" content="This is a combination Chinese New Year greeting card and mini video game to celebrate the Year of the Dog. Gong Xi Fa Cai, everyone!">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://shaunanoordin.com/cny2018/">
-<meta property="og:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
+<meta property="og:url" content="http://shaunanoordin.com/cny2018/">
+<meta property="og:image" content="http://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
 <meta property="og:image:type" content="image/png">
 <meta property="og:image:width" content="1024">
 <meta property="og:image:height" content="640">
@@ -17,7 +17,7 @@
 <meta name="twitter:creator" content="@darke_shard">
 <meta name="twitter:title" content="Chinese New Year 2018 - Year of the Dog">
 <meta name="twitter:description" content="This is a combination Chinese New Year greeting card and mini video game to celebrate the Year of the Dog. Gong Xi Fa Cai, everyone!">
-<meta name="twitter:image" content="https://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
+<meta name="twitter:image" content="http://shaunanoordin.com/cny2018/assets/cny2018-shaunanoordin.png">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="theme-color" content="#cc3333">
 <link href="./app/main.css" rel="stylesheet">
